--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 * {
-  padding: 0;
-  margin: 0;
+
   box-sizing: border-box;
 }
 .h1{
@@ -19,7 +18,7 @@
 }
 
 .kartite {
-  flex: 0 1 15%;
+  flex: 15%;
   position: static;
   transform: scale(1);
   transform-style: preserve-3d;
@@ -84,17 +83,6 @@ li a:hover {
 
 }
 
-.registracija{
-  width:170px;
-  height:80px;
-  background-color: #82B6A5;
-  text-align: center;
-  display: inline-block;
-  position: relative;
-  margin: 2%;
-
-}
-
 .virsraksts{
   width:550px;
   height:80px;
@@ -116,7 +104,7 @@ li a:hover {
   display: flex;
   justify-content: center;
   display: inline-block;
-  margin-left: 10%;
+  margin-left: 32%;
 }
 
 .speletajaVards {
@@ -127,7 +115,7 @@ li a:hover {
   display: flex;
   justify-content: center;
   display: inline-block;
-  margin-left:40.7% 
+  margin-left:10% 
 }
 
 .ieeja{
@@ -138,7 +126,7 @@ li a:hover {
   display: flex;
   justify-content: center;
   display: inline-block;
-  margin-left:15% ;
+  margin-right:27% ;
 }
 .wrapper{
   background-color: #C9EDDC;
@@ -158,17 +146,7 @@ li a:hover {
   justify-content: center;
   font-size: 3vW;
 }
-.tops {
-  width:300px;
-  height:100px;
-  background-color: #89B6A5;
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  display: inline-block;
-  margin-right: 15%;
 
-}
 .laiks{
   width:200px;
   height:100px;
@@ -178,7 +156,7 @@ li a:hover {
   justify-content: center;
   display: inline-block;
   margin-left: 5%;
-  margin-top: 15%;
+  margin-top: 2%;
 }
 
 .punkti{
@@ -200,7 +178,7 @@ li a:hover {
   display: flex;
   justify-content: center;
   display: inline-block;
-  margin-left:auto ;
+  margin-right:27% ;
 }
 
 .spelesVirsraksts {
